--- a/src/assets/css/sbAdmin.css
+++ b/src/assets/css/sbAdmin.css
@@ -163,11 +163,11 @@ a:hover {
   color: #224abe;
   text-decoration: underline;
 }
-a:not([href]):not([class]) {
+a:not([href]):not([className]) {
   color: inherit;
   text-decoration: none;
 }
-a:not([href]):not([class]):hover {
+a:not([href]):not([className]):hover {
   color: inherit;
   text-decoration: none;
 }
@@ -540,7 +540,7 @@ pre code {
   margin-left: 0;
 }
 .no-gutters > .col,
-.no-gutters > [class*="col-"] {
+.no-gutters > [className*="col-"] {
   padding-right: 0;
   padding-left: 0;
 }
@@ -1871,7 +1871,7 @@ textarea.form-control {
   margin-left: -5px;
 }
 .form-row > .col,
-.form-row > [class*="col-"] {
+.form-row > [className*="col-"] {
   padding-right: 5px;
   padding-left: 5px;
 }
@@ -1927,7 +1927,7 @@ textarea.form-control {
   border-radius: 0.35rem;
 }
 .form-row > .col > .valid-tooltip,
-.form-row > [class*="col-"] > .valid-tooltip {
+.form-row > [className*="col-"] > .valid-tooltip {
   left: 5px;
 }
 .is-valid ~ .valid-feedback,
@@ -2042,7 +2042,7 @@ textarea.form-control.is-valid {
   border-radius: 0.35rem;
 }
 .form-row > .col > .invalid-tooltip,
-.form-row > [class*="col-"] > .invalid-tooltip {
+.form-row > [className*="col-"] > .invalid-tooltip {
   left: 5px;
 }
 .is-invalid ~ .invalid-feedback,
